<resources>
    <string name="app_name">Flower Routine</string>
    <string name="btnAdicionarProcedimento">Adicionar Procedimento</string>
    <string name="btnAdicionarTarefa">Adicionar Tarefa</string>
    <string name="lblCadastroProcedimento">Cadrastro Procedimento</string>
    <string name="lblCadastroTarefa">Cadrastro Tarefa</string>
    <string name="lblProcedimentos">Procedimentos</string>
    <string name="lblTarefas">Tarefas</string>
    <string name="lblTerapias">Terapias</string>
    <string name="lblEventos">Eventos</string>
    <string name="lblRelatorios">Relatórios</string>
    <string name="lblPerfil">Perfil</string>
    <string name="lblConfiguracoes">Configurações</string>
    <string name="btnSalvar">Salvar</string>
    <string name="lblEstoque">Estoque</string>
    <string name="lblCancelarOperacao">Fechar</string>
    <string-array name="numeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="categorias">
        <item>Medicação</item>
        <item>Higienização</item>
        <item>Outro</item>
    </string-array>
    <string-array name="categoriasRelatorio">
        <item>Medicação</item>
        <item>Higienização</item>
        <item>Tarefa</item>
        <item>Ocorrência</item>
        <item>Outro</item>
    </string-array>
    <string-array name="periodos">
        <item>(MINUTO)</item>
        <item>(HORAS)</item>
        <item>(DIA S/N)</item>
        <item>(DIA)</item>
        <item>(SEMANA)</item>
        <item>(MÊS)</item>
        <item>(ANO)</item>
    </string-array>
    <string-array name="horarios">
        <item>00:00</item>
    </string-array>
    <string-array name="estados">
        <item>Defaults</item>
        <item>Vencimentos</item>
        <item>Instruções</item>
        <item>Lista ToDo (suspenso do escopo)</item>
    </string-array>
</resources>